--- a/.env
+++ b/.env
@@ -26,5 +26,5 @@ APP_SECRET=46e71e4e4319393b4396a30e99be5b28
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root@127.0.0.1:3306/studi_gestion_liste"
 ###< doctrine/doctrine-bundle ###
