--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "symfony/maker-bundle": "^1.33",
         "symfony/proxy-manager-bridge": "4.4.*",
         "symfony/routing": "4.4.*",
+        "symfony/stopwatch": "4.4.*",
         "symfony/twig-bundle": "4.4.*",
+        "symfony/web-profiler-bundle": "4.4.*",
         "symfony/yaml": "4.4.*"
     },
     "config": {
