--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=PROD
 APP_SECRET=46e71e4e4319393b4396a30e99be5b28
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
@@ -26,5 +26,6 @@ APP_SECRET=46e71e4e4319393b4396a30e99be5b28
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="mysql://root@127.0.0.1:3306/studi_gestion_liste"
+#DATABASE_URL="mysql://root@127.0.0.1:3306/studi_gestion_liste"
+DATABASE_URL="mysql://uqof29bvlakriumx:SN1rUHHauuRr7h9RqKfF@blzgyeu6rxjeiovi1jvu-mysql.services.clever-cloud.com:3306/blzgyeu6rxjeiovi1jvu"
 ###< doctrine/doctrine-bundle ###
